---------------------------
  Jackdmp changes log
---------------------------

2006-12-12 Stephane Letz  <letz@grame.fr>

	* Fix memory leak in ringbuffer.c.

2006-11-29 Stephane Letz  <letz@grame.fr>

	* Correct JackWinEnvent::Allocate (handle the ERROR_ALREADY_EXISTS case). Correct JackEngine::ClientExternalNew.
	* Karsten Wiese correction for ALSA usx2y driver.

2006-11-22 Stephane Letz  <letz@grame.fr>

	* In synchronous mode, if the driver time out is reached, the server may get desynchronized (pending signal may arrive in later cycles), 
	improve audio driver synchronous code to better handle this case.
	 
2006-11-08 Stephane Letz  <letz@grame.fr>

	* Synchronize ALSA backend with jack one.

2006-11-04 Stephane Letz  <letz@grame.fr>

	* Use -D to setup ADDON_DIR on OSX and Linux.

2006-10-11 Stephane Letz  <letz@grame.fr>

	* Correct server SetBufferSize in case of failure. Correct PortAudio driver help.

2006-10-06 Stephane Letz  <letz@grame.fr>

	* Add a new cpu testing/loading client.

2006-09-23  Stephane Letz  <letz@grame.fr>

	* Rename global "verbose" in "jack_verbose" to avoid symbol clash with PureData.

2006-09-20  Stephane Letz  <letz@grame.fr>

	* On Windows, avoid to use the unsafe Kill thread method. Use thread Stop instead and have blocked IO be unlocked. 
	* Still get RT thread termination problems, restore a version that works on OSX and Linux with conditionnal compilation for now.

2006-09-16  Stephane Letz  <letz@grame.fr>

	* Restore behaviour of LoopBack driver, which has to be opened in any case...

2006-09-15  Stephane Letz  <letz@grame.fr>

	* On Windows version, use signal to quit the server.

2006-09-13  Stephane Letz  <letz@grame.fr>

	* Correct pipe destruction bug in JackWinNamedPipe class.

2006-09-11  Stephane Letz  <letz@grame.fr>

	* Handling of LoopBack driver only when really needed.
	* Correct crash bug when closing clients on Windows due to multi-threading synchronization issues.

2006-09-06  Stephane Letz  <letz@grame.fr>