@@ -442,11 +442,8 @@ class JackConnectionManager
         const jack_int_t* GetOutputPorts(int refnum);
 
         // Client management
-        //int AllocateRefNum();
-        //void ReleaseRefNum(int refnum);
-		void InitRefNum(int refnum);
-
-        int GetInputRefNum(jack_port_id_t port_index) const;
+ 		void InitRefNum(int refnum);
+		int GetInputRefNum(jack_port_id_t port_index) const;
         int GetOutputRefNum(jack_port_id_t port_index) const;
 
         // Connect/Disconnect 2 refnum "directly"
