@@ -67,26 +67,6 @@ int JackGraphManager::GetConnectionsNum(jack_port_id_t port_index)
 }
 
 // Server
-/*
-int JackGraphManager::AllocateRefNum()
-{
-    JackConnectionManager* manager = WriteNextStateStart();
-    int res = manager->AllocateRefNum();
-    WriteNextStateStop();
-    return res;
-}
-*/
-
-// Server
-/*
-void JackGraphManager::ReleaseRefNum(int refnum)
-{
-    JackConnectionManager* manager = WriteNextStateStart();
-    manager->ReleaseRefNum(refnum);
-    WriteNextStateStop();
-}
-*/
-
 void JackGraphManager::InitRefNum(int refnum)
 {
     JackConnectionManager* manager = WriteNextStateStart();
